--- a/templates/article.html
+++ b/templates/article.html
@@ -31,6 +31,7 @@
 			<div class="collapse navbar-collapse text-center order-lg-2 order-4" id="navigation">
 			  <ul class="navbar-nav mx-auto mt-3 mt-lg-0">
 				<li class="nav-item"> <a class="nav-link" href="/360">360</a> </li>
+				<li class="nav-item"> <a class="nav-link" href="/estatistica">Estatistica</a> </li>
 				<!-- <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					Tópicos
 				  </a>
