--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,7 @@
       <div class="collapse navbar-collapse text-center order-lg-2 order-4" id="navigation">
         <ul class="navbar-nav mx-auto mt-3 mt-lg-0">
           <li class="nav-item"> <a class="nav-link" href="/360">360</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="/estatistica">Estatistica</a> </li>
           <!-- <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Tópicos
             </a>
@@ -157,9 +158,9 @@
       <div class="col-lg-12">
         <div class="widget">
           <div class="widget-body">
-            <img loading="lazy" decoding="async" src="https://static.independent.co.uk/2022/03/16/18/newFile-5.jpg" alt="" class="w-100 author-thumb-sm d-block">
-            <h2 class="widget-title my-3">Grupo 1</h2>
-            <p class="mb-3 pb-2">descidimos criar este site informativo para saber mais sobre astroniomia</p> 
+            <img loading="lazy" decoding="async" src="https://static.vecteezy.com/ti/vetor-gratis/p3/21448290-planeta-icone-astronomia-ilustracao-placa-espaco-simbolo-ciencia-logotipo-vetor.jpg" alt="" class="w-100 author-thumb-sm d-block">
+            <h2 class="widget-title my-3">Astropoint</h2>
+            <p class="mb-3 pb-2">Site criado para divulgação de artigos de astronomia, constituído e criado pelos elementos do team Astropoint!</p> 
           </div>
         </div>
       </div>
