--- a/templates/solar_system.html
+++ b/templates/solar_system.html
@@ -1,29 +1,77 @@
 <!doctype html>
-<html lang="pt">
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title dir="ltr">3D Sistema Solar</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='css/solarsystem/styles.css') }}">
-    
+	<title>Astropoint</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Neuton:wght@700&family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='css/solar_system.css')}}">
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css')}}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   </head>
   <body class="opening hide-UI view-2D zoom-large data-close controls-close">
-    <div id="navbar">
-      <a id="toggle-data" href="#data"><i class="icon-data"></i>Data</a>
-      <h1>Sistema Solar</h1>
-      <a id="toggle-controls" href="#controls"><i class="icon-controls"></i>Controls</a>
-    </div>
+
+    <header class="navigation" style="background-color: white;">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light px-0">
+        <a class="navbar-brand order-1 py-0" href="/">
+          Astropoint
+        </a>
+        <div class="navbar-actions order-3 ml-0 ml-md-4">
+          <button aria-label="navbar toggler" class="navbar-toggler border-0" type="button" data-toggle="collapse"
+          data-target="#navigation"> <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+        <form method="get" action="/pesquisar" class="search order-lg-3 order-md-2 order-3 ml-auto">
+          <input id="search-query" name="s" type="search" placeholder="pesquisar..." autocomplete="off">
+        </form>
+        <div class="collapse navbar-collapse text-center order-lg-2 order-4" id="navigation">
+          <ul class="navbar-nav mx-auto mt-3 mt-lg-0">
+          <li class="nav-item"> <a class="nav-link" href="/360">360</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="/estatistica">Estatistica</a> </li>
+          <!-- <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Tópicos
+            </a>
+            <div class="dropdown-menu"> 
+            <a class="dropdown-item" href="/topico/eventos">Eventos Asstronomicos</a>
+            <a class="dropdown-item" href="/">Ferramentas de Observação</a>
+            </div>
+          </li> -->
+          {% if user is not none %}   
+            <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{ user.name }}
+            </a>
+            <div class="dropdown-menu"> 
+            {% if user.is_writter is true %} 
+            <a class="dropdown-item" href="/perfil/{{ user.id }}">Perfil</a>
+            {% endif %}
+            <a class="dropdown-item" href="/logout">Sair</a>
+            </div>
+          </li>
+      
+            
+          {% else %}
+          <li class="nav-item"> <a class="nav-link" href="/login">Entrar</a>
+          {% endif %}
+      
+          </li>
+          </ul>
+        </div>
+        </nav>
+      </div>
+      </header>
+
     <div id="data">
-      <a class="sun" title="sun" href="#sunspeed">Sun</a>
-      <a class="mercury" title="mercury" href="#mercuryspeed">Mercury</a>
+      <a class="sun" title="sun" href="#sunspeed">Sol</a>
+      <a class="mercury" title="mercury" href="#mercuryspeed">Mercurio</a>
       <a class="venus" title="venus" href="#venusspeed">Venus</a>
-      <a class="earth active" title="earth" href="#earthspeed">Earth</a>
+      <a class="earth active" title="earth" href="#earthspeed">Terra</a>
       <a class="mars" title="mars" href="#marsspeed">Mars</a>
       <a class="jupiter" title="jupiter" href="#jupiterspeed">Jupiter</a>
-      <a class="saturn" title="saturn" href="#saturnspeed">Saturn</a>
+      <a class="saturn" title="saturn" href="#saturnspeed">Saturno</a>
       <a class="uranus" title="uranus" href="#uranusspeed">Uranus</a>
       <a class="neptune" title="neptune" href="#neptunespeed">Neptune</a>
     </div>
@@ -36,15 +84,15 @@
       </label>
       <label>
         <input type="radio" class="set-speed" name="scale" checked>
-        <span>Speed</span>
+        <span>Velocidade</span>
       </label>
       <label>
         <input type="radio" class="set-size" name="scale">
-        <span>Size</span>
+        <span>Tamanho</span>
       </label>
       <label>
         <input type="radio" class="set-distance" name="scale">
-        <span>Distance</span>
+        <span>Distancia</span>
       </label>
     </div>
     <div id="universe" class="scale-stretched">
@@ -148,12 +196,16 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script type="text/javascript">
     if (typeof jQuery == 'undefined') { 
-      document.write(unescape('%3Cscript src="js/solarsystem/jquery.min.js" type="text/javascript"%3E%3C/script%3E'));
+      document.write(unescape("%3Cscript src='js/jquery.min.js' type='text/javascript'%3E%3C/script%3E"));
     }
     </script>
-    <script src="{{ url_for('static', filename='js/solarsystem/prefixfree.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/solarsystem/jquery.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/solarsystem/prefixfree.min.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/solarsystem/scripts.min.js')}}"></script>~
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 
+    <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
   </body>
   
 </html>
